style :art: list与tree相互转换工具包